mongodb-replica-set.yaml
---

apiVersion: v1
kind: Namespace
metadata:
  name: dev
