backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-database-namespace
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
